<resources>
    <string name="app_name">MysuruTourism</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_about_mysuru">About Mysuru</string>
    <string name="menu_covid_guidelines">Post COVID Travel Guidelines</string>
    <string name="menu_places_to_visit">Places To Visit</string>
    <string name="menu_volunteer_form">Volunteer Form</string>
    <string name="menu_volunteer_list">Volunteer List</string>
    <string name="menu_transportation">Transport Facilities</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>